add code pub work remove LINUX

--- a/quill_native_bridge/pubspec.yaml
+++ b/quill_native_bridge/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   quill_native_bridge_platform_interface: ^0.0.2+1
   quill_native_bridge_web: ^0.0.2
   quill_native_bridge_windows: ^0.0.1
-  quill_native_bridge_linux: ^0.0.2
+#  quill_native_bridge_linux: ^0.0.3
   quill_native_bridge_ios: ^0.0.1
   quill_native_bridge_macos: ^0.0.1
 
@@ -42,5 +42,5 @@ flutter:
         default_package: quill_native_bridge_web
       windows:
         default_package: quill_native_bridge_windows
-      linux:
-        default_package: quill_native_bridge_linux
+#      linux:
+#        default_package: quill_native_bridge_linux
