--- a/quill_native_bridge/example/pubspec.yaml
+++ b/quill_native_bridge/example/pubspec.yaml
@@ -23,8 +23,8 @@ dependency_overrides:
     path: ../../quill_native_bridge_web
   quill_native_bridge_windows:
     path: ../../quill_native_bridge_windows
-  quill_native_bridge_linux:
-    path: ../../quill_native_bridge_linux
+#  quill_native_bridge_linux:
+#    path: ../../quill_native_bridge_linux
   quill_native_bridge_ios:
     path: ../../quill_native_bridge_ios
   quill_native_bridge_macos:
